--- a/views/cat_products.ejs
+++ b/views/cat_products.ejs
@@ -11,7 +11,7 @@
                 <a class="pa" href="/products/<%= p.category %>/<%= p.slug %>">
                     <img class="pimage" src="/product_images/<%= p.id %>/<%= p.image %>" alt="">
                 </a>
-                <h3><%= p.title %></h3>
+                <h3><%= p.title.substring(0,20) %></h3>
                 <h4>₹<%= parseFloat(p.price).toFixed(2) %></h4>
                 <a class="vd" href="/products/<%= p.category %>/<%= p.slug %>">View Details</a>
             </div>
